--- a/package.json
+++ b/package.json
@@ -6,8 +6,18 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
+        "@vue/compiler-sfc": "^3.4.33",
         "axios": "^1.6.4",
+        "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "sass": "^1.56.1",
+        "vite": "^5.0",
+        "vue-loader": "^17.3.1"
+    },
+    "dependencies": {
+        "autoprefixer": "10.4.5",
+        "vue": "^3.4.33",
+        "vue-router": "^4.4.0"
     }
 }
